[package]
name = "clue"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.53", features = ["derive"] }
dotenvy = "0.15.7"
reqwest = "0.12.24"
serde = "1.0.228"
tokio = { version = "1.48.0", features = ["full"] }
colored = "2"
clipboard = "0.5.0"
async-openai = { version = "0.31.1", features = ["responses"] }
serde_json = "1.0.145"
