[package]
name = "knock"
version = "0.2.2"
edition = "2024"

[[bin]]
name = "kn"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5.53", features = ["derive"] }
dotenvy = "0.15.7"
reqwest = { version = "0.12.24", features = ["blocking"] }
serde = "1.0.228"
tokio = { version = "1.48.0", features = ["full"] }
colored = "2"
clipboard = "0.5.0"
async-openai = { version = "0.31.1", features = ["responses"] }
serde_json = "1.0.145"
sled = "0.34"
