[package]
name = "knock"
version = "0.2.2"
edition = "2024"

[[bin]]
name = "kn"
path = "src/main.rs"

[dependencies]
conduit = { git = "https://github.com/michaelyang12/conduit.git", path = "../conduit" }
clap = { version = "4.5", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
colored = "2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sled = "0.34"
clipboard = "0.5.0"
